@@ -141,32 +141,45 @@ void PeakSegFPOPLog
     intervals_mat[i] = up_cost->piece_list.size();
     up_cost->Minimize
       (cost_mat+i, &best_log_mean,
-       &prev_seg_end, &equality_constraint_active);
+       &prev_seg_end, &equality_constraint_active,
+       min_log_mean, max_log_mean);
   }
+  // last segment is down (offset N) so the second to last segment is
+  // up (offset 0).
   int prev_seg_offset = 0;
   down_cost = &cost_model_mat[data_count*2-1];
   down_cost->Minimize
     (&best_cost, &best_log_mean,
-     &prev_seg_end, &equality_constraint_active);
+     &prev_seg_end, &equality_constraint_active,
+     min_log_mean, max_log_mean);
   mean_vec[0] = exp(best_log_mean);
   end_vec[0] = prev_seg_end;
   int out_i=1;
   while(0 <= prev_seg_end){
-    //printf("decoding out_i=%d prev_seg_end=%d prev_seg_offset=%d\n", out_i, prev_seg_end, prev_seg_offset);
+    // up_cost is actually either an up or down cost.
     up_cost = &cost_model_mat[prev_seg_offset + prev_seg_end];
+    //printf("decoding out_i=%d prev_seg_end=%d prev_seg_offset=%d\n", out_i, prev_seg_end, prev_seg_offset);
     //up_cost->print();
+    double this_min, this_max;
+    if(prev_seg_offset==0){
+      //up_cost is actually up, minimization needs a lower bound.
+      prev_seg_offset = data_count;
+      this_min = best_log_mean;
+      this_max = max_log_mean;
+    }else{
+      //up_cost is actually down, minimization needs an upper bound.
+      prev_seg_offset = 0;
+      this_min = min_log_mean;
+      this_max = best_log_mean;
+    }
     if(equality_constraint_active){
       up_cost->findMean
 	(best_log_mean, &prev_seg_end, &equality_constraint_active);
     }else{
       up_cost->Minimize
 	(&best_cost, &best_log_mean,
-	 &prev_seg_end, &equality_constraint_active);
-    }
-    if(prev_seg_offset==0){
-      prev_seg_offset = data_count;
-    }else{
-      prev_seg_offset = 0;
+	 &prev_seg_end, &equality_constraint_active,
+	 this_min, this_max);
     }
     mean_vec[out_i] = exp(best_log_mean);
     end_vec[out_i] = prev_seg_end;
@@ -174,133 +187,133 @@ void PeakSegFPOPLog
   }//for(data_i
 }
 
-void PeakSegFPOPall
-(int *data_vec, double *weight_vec, int data_count,
- double penalty,
- // the following matrices are for output.
- // cost_mat and intervals_mat store the optimal cost and number of intervals
- // at each time point, for the up and down cost models.
- // end_vec and mean_vec store the best model up to and including the
- // last data point. 
- double *cost_mat, //data_count x 2.
- int *end_vec, //data_count
- double *mean_vec,//data_count
- int *intervals_mat,//data_count x 2
- int *label_vec){//data_count
-  double min_log_mean=log(data_vec[0]), max_log_mean=log(data_vec[0]);
-  for(int data_i=1; data_i<data_count; data_i++){
-    double log_data = log(data_vec[data_i]);
-    if(log_data < min_log_mean){
-      min_log_mean = log_data;
-    }
-    if(max_log_mean < log_data){
-      max_log_mean = log_data;
-    }
-  }
-  std::vector<PiecewisePoissonLossLog> cost_model_mat(data_count * 2);
-  PiecewisePoissonLossLog *up_cost, *down_cost, *up_cost_prev, *down_cost_prev;
-  PiecewisePoissonLossLog min_prev_cost;
-  int verbose=0;
-  for(int data_i=0; data_i<data_count; data_i++){
-    //printf("computing cost data_i=%d\n", data_i);
-    up_cost = &cost_model_mat[data_i];
-    down_cost = &cost_model_mat[data_i + data_count]; 
-    if(data_i==0){
-      // initialization C_1(m)=gamma_1(m)
-      up_cost->piece_list.emplace_back
-	(weight_vec[0], -data_vec[0]*weight_vec[0], 0.0,
-	 min_log_mean, max_log_mean, -1, false);
-      down_cost->piece_list.emplace_back
-	(weight_vec[0], -data_vec[0]*weight_vec[0], 0.0,
-	 min_log_mean, max_log_mean, -1, false);
-    }else{
-      // if data_i is up, it could have come from down_cost_prev.
-      min_prev_cost.set_to_min_less_of(down_cost_prev, verbose);
-      min_prev_cost.set_prev_seg_end(data_i-1);
-      min_prev_cost.add(0.0, 0.0, penalty);
-      up_cost->set_to_min_env_of(&min_prev_cost, up_cost_prev, verbose);
-      up_cost->add
-	(weight_vec[data_i],
-	 -data_vec[data_i]*weight_vec[data_i],
-	 0.0);
-      // if data_i is down, it could have come from up_cost_prev.
-      min_prev_cost.set_to_min_more_of(up_cost_prev, verbose);
-      min_prev_cost.set_prev_seg_end(data_i-1);
-      min_prev_cost.add(0.0, 0.0, penalty);
-      down_cost->set_to_min_env_of(&min_prev_cost, down_cost_prev, verbose);
-      down_cost->add
-	(weight_vec[data_i],
-	 -data_vec[data_i]*weight_vec[data_i],
-	 0.0);
-    }
-    up_cost_prev = up_cost;
-    down_cost_prev = down_cost;
-  }
-  // Decoding the cost_model_vec, and writing to the output matrices.
-  double best_cost, best_log_mean, candidate_cost, candidate_log_mean;
-  bool equality_constraint_active, candidate_constraint;
-  int prev_seg_end=data_count, candidate_end;
-  for(int i=0; i<data_count; i++){
-    mean_vec[i] = INFINITY;
-    end_vec[i] = -2;
-    label_vec[i] = -1;
-  }
-  for(int i=0; i<2*data_count; i++){
-    up_cost = &cost_model_mat[i];
-    intervals_mat[i] = up_cost->piece_list.size();
-    up_cost->Minimize
-      (cost_mat+i, &best_log_mean,
-       &prev_seg_end, &equality_constraint_active);
-  }
-  int prev_seg_offset;
-  up_cost = &cost_model_mat[data_count-1];
-  up_cost->Minimize
-    (&candidate_cost, &candidate_log_mean,
-     &candidate_end, &candidate_constraint);
-  //printf("final up cost=%f at log_mean=%f\n", candidate_cost, candidate_log_mean);
-  //up_cost->print();
-  down_cost = &cost_model_mat[data_count*2-1];
-  down_cost->Minimize
-    (&best_cost, &best_log_mean,
-     &prev_seg_end, &equality_constraint_active);
-  //printf("final down cost=%f at log_mean=%f\n", best_cost, best_log_mean);
-  //down_cost->print();
-  if(candidate_cost < best_cost){
-    //more likely to end up, so previous segment was down.
-    best_cost = candidate_cost;
-    best_log_mean = candidate_log_mean;
-    prev_seg_end = candidate_end;
-    equality_constraint_active = candidate_constraint;
-    prev_seg_offset = data_count;
-    label_vec[0] = 1;
-  }else{
-    prev_seg_offset = 0;
-    label_vec[0] = 0;
-  }
-  mean_vec[0] = exp(best_log_mean);
-  end_vec[0] = prev_seg_end;
-  int out_i=1;
-  while(0 <= prev_seg_end){
-    //printf("decoding out_i=%d prev_seg_end=%d prev_seg_offset=%d\n", out_i, prev_seg_end, prev_seg_offset);
-    up_cost = &cost_model_mat[prev_seg_offset + prev_seg_end];
-    //up_cost->print();
-    if(equality_constraint_active){
-      up_cost->findMean
-	(best_log_mean, &prev_seg_end, &equality_constraint_active);
-    }else{
-      up_cost->Minimize
-	(&best_cost, &best_log_mean,
-	 &prev_seg_end, &equality_constraint_active);
-    }
-    if(prev_seg_offset==0){
-      prev_seg_offset = data_count;
-      label_vec[out_i] = 1;
-    }else{
-      prev_seg_offset = 0;
-      label_vec[out_i] = 0;
-    }
-    mean_vec[out_i] = exp(best_log_mean);
-    end_vec[out_i] = prev_seg_end;
-    out_i++;
-  }//for(data_i
-}
+// void PeakSegFPOPall
+// (int *data_vec, double *weight_vec, int data_count,
+//  double penalty,
+//  // the following matrices are for output.
+//  // cost_mat and intervals_mat store the optimal cost and number of intervals
+//  // at each time point, for the up and down cost models.
+//  // end_vec and mean_vec store the best model up to and including the
+//  // last data point. 
+//  double *cost_mat, //data_count x 2.
+//  int *end_vec, //data_count
+//  double *mean_vec,//data_count
+//  int *intervals_mat,//data_count x 2
+//  int *label_vec){//data_count
+//   double min_log_mean=log(data_vec[0]), max_log_mean=log(data_vec[0]);
+//   for(int data_i=1; data_i<data_count; data_i++){
+//     double log_data = log(data_vec[data_i]);
+//     if(log_data < min_log_mean){
+//       min_log_mean = log_data;
+//     }
+//     if(max_log_mean < log_data){
+//       max_log_mean = log_data;
+//     }
+//   }
+//   std::vector<PiecewisePoissonLossLog> cost_model_mat(data_count * 2);
+//   PiecewisePoissonLossLog *up_cost, *down_cost, *up_cost_prev, *down_cost_prev;
+//   PiecewisePoissonLossLog min_prev_cost;
+//   int verbose=0;
+//   for(int data_i=0; data_i<data_count; data_i++){
+//     //printf("computing cost data_i=%d\n", data_i);
+//     up_cost = &cost_model_mat[data_i];
+//     down_cost = &cost_model_mat[data_i + data_count]; 
+//     if(data_i==0){
+//       // initialization C_1(m)=gamma_1(m)
+//       up_cost->piece_list.emplace_back
+// 	(weight_vec[0], -data_vec[0]*weight_vec[0], 0.0,
+// 	 min_log_mean, max_log_mean, -1, false);
+//       down_cost->piece_list.emplace_back
+// 	(weight_vec[0], -data_vec[0]*weight_vec[0], 0.0,
+// 	 min_log_mean, max_log_mean, -1, false);
+//     }else{
+//       // if data_i is up, it could have come from down_cost_prev.
+//       min_prev_cost.set_to_min_less_of(down_cost_prev, verbose);
+//       min_prev_cost.set_prev_seg_end(data_i-1);
+//       min_prev_cost.add(0.0, 0.0, penalty);
+//       up_cost->set_to_min_env_of(&min_prev_cost, up_cost_prev, verbose);
+//       up_cost->add
+// 	(weight_vec[data_i],
+// 	 -data_vec[data_i]*weight_vec[data_i],
+// 	 0.0);
+//       // if data_i is down, it could have come from up_cost_prev.
+//       min_prev_cost.set_to_min_more_of(up_cost_prev, verbose);
+//       min_prev_cost.set_prev_seg_end(data_i-1);
+//       min_prev_cost.add(0.0, 0.0, penalty);
+//       down_cost->set_to_min_env_of(&min_prev_cost, down_cost_prev, verbose);
+//       down_cost->add
+// 	(weight_vec[data_i],
+// 	 -data_vec[data_i]*weight_vec[data_i],
+// 	 0.0);
+//     }
+//     up_cost_prev = up_cost;
+//     down_cost_prev = down_cost;
+//   }
+//   // Decoding the cost_model_vec, and writing to the output matrices.
+//   double best_cost, best_log_mean, candidate_cost, candidate_log_mean;
+//   bool equality_constraint_active, candidate_constraint;
+//   int prev_seg_end=data_count, candidate_end;
+//   for(int i=0; i<data_count; i++){
+//     mean_vec[i] = INFINITY;
+//     end_vec[i] = -2;
+//     label_vec[i] = -1;
+//   }
+//   for(int i=0; i<2*data_count; i++){
+//     up_cost = &cost_model_mat[i];
+//     intervals_mat[i] = up_cost->piece_list.size();
+//     up_cost->Minimize
+//       (cost_mat+i, &best_log_mean,
+//        &prev_seg_end, &equality_constraint_active);
+//   }
+//   int prev_seg_offset;
+//   up_cost = &cost_model_mat[data_count-1];
+//   up_cost->Minimize
+//     (&candidate_cost, &candidate_log_mean,
+//      &candidate_end, &candidate_constraint);
+//   //printf("final up cost=%f at log_mean=%f\n", candidate_cost, candidate_log_mean);
+//   //up_cost->print();
+//   down_cost = &cost_model_mat[data_count*2-1];
+//   down_cost->Minimize
+//     (&best_cost, &best_log_mean,
+//      &prev_seg_end, &equality_constraint_active);
+//   //printf("final down cost=%f at log_mean=%f\n", best_cost, best_log_mean);
+//   //down_cost->print();
+//   if(candidate_cost < best_cost){
+//     //more likely to end up, so previous segment was down.
+//     best_cost = candidate_cost;
+//     best_log_mean = candidate_log_mean;
+//     prev_seg_end = candidate_end;
+//     equality_constraint_active = candidate_constraint;
+//     prev_seg_offset = data_count;
+//     label_vec[0] = 1;
+//   }else{
+//     prev_seg_offset = 0;
+//     label_vec[0] = 0;
+//   }
+//   mean_vec[0] = exp(best_log_mean);
+//   end_vec[0] = prev_seg_end;
+//   int out_i=1;
+//   while(0 <= prev_seg_end){
+//     //printf("decoding out_i=%d prev_seg_end=%d prev_seg_offset=%d\n", out_i, prev_seg_end, prev_seg_offset);
+//     up_cost = &cost_model_mat[prev_seg_offset + prev_seg_end];
+//     //up_cost->print();
+//     if(equality_constraint_active){
+//       up_cost->findMean
+// 	(best_log_mean, &prev_seg_end, &equality_constraint_active);
+//     }else{
+//       up_cost->Minimize
+// 	(&best_cost, &best_log_mean,
+// 	 &prev_seg_end, &equality_constraint_active);
+//     }
+//     if(prev_seg_offset==0){
+//       prev_seg_offset = data_count;
+//       label_vec[out_i] = 1;
+//     }else{
+//       prev_seg_offset = 0;
+//       label_vec[out_i] = 0;
+//     }
+//     mean_vec[out_i] = exp(best_log_mean);
+//     end_vec[out_i] = prev_seg_end;
+//     out_i++;
+//   }//for(data_i
+// }
